# agent-memory-engine

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  README.zh-CN.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: agent_memory_policy.md  local_vector_retrieval.md  memory_retention_compaction.md
docs/architecture/: branch-aware-memory.md  git-aware-sync.md  knowledge-pipeline.md  local-runtime.md  mcp-integration.md  memory-lifecycle.md  multigranular_memory_architecture.md  retrieval-pipeline.md  system-overview.md
docs/assets/: banner-design.md  make_banner.py
examples/sample-mcp-configs/: claude-code.json  cursor.json
memory_engine/: __init__.py  cli.py  config.py  main.py
memory_engine/agent/: __init__.py
memory_engine/api/: deps.py
scripts/: install.ps1  install.sh
tests/: conftest.py  helpers.py  test_conflict.py  test_context_composer.py  test_deduplication.py  test_evidence.py  test_inspect.py  test_memories.py  test_phase10_slice1_models.py  test_phase10_slice2_write_pipeline.py  test_phase10_slice3_retrieval.py  test_phase10_slice4_fusion.py  test_phase11_mcp_compat.py  test_phase11_policy.py  test_phase11_retention.py  test_phase13_cli.py  test_phase13_embedding.py  test_phase13_hybrid_retrieval.py  test_phase13_mcp.py  test_phase13_migration.py  test_phase13_sqlite_vec.py  test_phase4.py  test_phase5.py  test_phase6.py  test_phase7.py  test_phase9.py  test_placement.py  test_projects.py  test_promotion.py  test_ranker.py  test_recall.py  test_seeding.py  test_skill_router.py  test_tree.py
(+90 files in other folders)
